Fixed open source

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
       </div>
     </div>
     <div class="hosted">
-      Hosted with <a href="https://www.netlify.com/">Netlify</a> Hosted with
-      <a href="https://github.com/dgaddist/github-hosting.git">Github</a>
+      Hosted with <a href="https://www.netlify.com/">Netlify</a> Open sourced
+      <a href="https://github.com/dgaddist/github.hosting">Github</a>
     </div>
     <script src="src/index.js"></script>
   </body>
