updating precip, humidity, and wind placement

--- a/index.html
+++ b/index.html
@@ -47,9 +47,13 @@
             <span class="maintemp2"> <a href="#" id="cel-display">°C </a></span>
           </h2>
           <h3>
-            <div class="w1">Precipitation: 15%</div>
-            <div class="w2">Humidity: 83%</div>
-            <div class="w3">Wind: 2mph</div>
+            <div class="col-md-6">
+              <ul>
+                <li><div class="w1">Precipitation: 15%</div></li>
+                <li><div class="w2">Humidity: 83%</div></li>
+                <li><div class="w3">Wind: 2mph</div></li>
+              </ul>
+            </div>
           </h3>
           <h4>
             <div class="date" id="display-date">Monday</div>
@@ -92,8 +96,10 @@
       </div>
     </div>
     <div class="hosted">
-      Hosted with <a href="https://www.netlify.com/">Netlify</a> Open sourced
-      <a href="https://github.com/dgaddist/github.hosting">Github</a>
+      Hosted with <a href="https://www.netlify.com/">Netlify</a> , and
+      open-sourced
+      <a href="https://github.com/dgaddist/github.hosting">Github</a> by Destiny
+      Gaddist
     </div>
     <script src="src/index.js"></script>
   </body>
