--- a/index.html
+++ b/index.html
@@ -39,27 +39,36 @@
           <h1 id="city-heading">
             <div class="currentloc">Miami, Florida</div>
           </h1>
-          <h2>
-            <img src="images/cloudy.png" width="50px" />
-            <span class="displaytemp" id="temp-display">75</span>
-            <span class="maintemp"> <a href="#" id="far-display">°F </a></span>
-            <span class="holder">|</span>
-            <span class="maintemp2"> <a href="#" id="cel-display">°C </a></span>
-          </h2>
-          <h3>
-            <div class="col-md-6">
-              <ul>
-                <li><div class="w1">Precipitation: 15%</div></li>
-                <li><div class="w2">Humidity: 83%</div></li>
-                <li><div class="w3">Wind: 2mph</div></li>
-              </ul>
+          <div class="container">
+            <div class="row">
+              <div class="col-4">
+                <img src="images/cloudy.png" width="50px" />
+                <span class="displaytemp" id="temp-display">75</span>
+                <span class="maintemp">
+                  <a href="#" id="far-display">°F </a></span
+                >
+                <span class="holder">|</span>
+                <span class="maintemp2">
+                  <a href="#" id="cel-display">°C </a></span
+                >
+              </div>
+              <div class="col-3">
+                <ul>
+                  <li><div class="w1">Precipitation: 15%</div></li>
+                  <li><div class="w2">Humidity: 83%</div></li>
+                  <li><div class="w3">Wind: 2mph</div></li>
+                </ul>
+              </div>
+              <div class="col-4">
+                <ul>
+                  <li><div class="date" id="display-date">Monday</div></li>
+                  <li><div class="time" id="display-time">8:00 AM</div></li>
+                  <li><div class="feels">Scattered thunderstorms</div></li>
+                </ul>
+              </div>
             </div>
-          </h3>
-          <h4>
-            <div class="date" id="display-date">Monday</div>
-            <div class="time" id="display-time">8:00 AM</div>
-            <div class="feels">Scattered thunderstorms</div>
-          </h4>
+          </div>
+
           <div class="row">
             <div class="col-2">
               <div class="weekday">Tue</div>
