change open soure and center weather app

--- a/index.html
+++ b/index.html
@@ -108,9 +108,8 @@
     </div>
     <div class="hosted">
       Hosted with <a href="https://www.netlify.com/">Netlify</a> , and
-      open-sourced
-      <a href="https://github.com/dgaddist/github.hosting">Github</a> by Destiny
-      Gaddist
+      <a href="https://github.com/dgaddist/github.hosting">Open-source code</a>
+      by Destiny Gaddist
     </div>
     <script src="src/index.js"></script>
   </body>
