Removed from page "sunny" picture and added relv icon based on weather

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div class="container">
             <div class="row">
               <div class="col-sm-4">
-                <img src="images/cloudy.png" width="50px" />
+                <img src="" width="50px" id="cloudy-icon" />
                 <span class="displaytemp" id="temp-display">75</span>
                 <span class="maintemp">
                   <a href="#" id="far-display">°F </a></span
