--- a/index.html
+++ b/index.html
@@ -42,15 +42,17 @@
           <div class="container">
             <div class="row">
               <div class="col-sm-4">
-                <img src="" width="50px" id="cloudy-icon" />
-                <span class="displaytemp" id="temp-display">75</span>
-                <span class="maintemp">
-                  <a href="#" id="far-display">°F </a></span
-                >
-                <span class="holder">|</span>
-                <span class="maintemp2">
-                  <a href="#" id="cel-display">°C </a></span
-                >
+                <div class="weather-temp">
+                  <img src="" width="50px" id="cloudy-icon" />
+                  <span class="displaytemp" id="temp-display">75</span>
+                  <span class="maintemp">
+                    <a href="#" id="far-display">°F </a></span
+                  >
+                  <span class="holder">|</span>
+                  <span class="maintemp2">
+                    <a href="#" id="cel-display" class="active">°C </a></span
+                  >
+                </div>
               </div>
               <div class="col-sm-4">
                 <ul>
