Updating current location button Alowing user to click button and to display name and current temperature of location

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
                   <img src="" width="50px" id="cloudy-icon" />
                   <span class="displaytemp" id="temp-display">75</span>
                   <span class="maintemp">
-                    <a href="#" id="far-display">°F </a></span
+                    <a href="#" id="far-display" class="active">°F </a></span
                   >
                   <span class="holder">|</span>
                   <span class="maintemp2">
-                    <a href="#" id="cel-display" class="active">°C </a></span
+                    <a href="#" id="cel-display">°C </a></span
                   >
                 </div>
               </div>
@@ -124,7 +124,6 @@
       </div>
     </div>
     <div class="hosted">
-      Hosted with <a href="https://www.netlify.com/">Netlify</a> , and
       <a href="https://github.com/dgaddist/github.hosting">Open-source code</a>
       by Destiny Gaddist
     </div>
