Change API from openWeather to sheCodes

--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
           </h5>
           <p class="card-text"></p>
           <h1 id="city-heading">
-            <div class="currentloc">Miami, Florida</div>
+            <div class="currentloc"></div>
           </h1>
           <div class="container">
             <div class="row">
               <div class="col-sm-4">
                 <div class="weather-temp">
                   <img src="" width="50px" id="cloudy-icon" />
-                  <span class="displaytemp" id="temp-display">75</span>
+                  <span class="displaytemp" id="temp-display"></span>
                   <span class="maintemp">
                     <a href="#" id="far-display" class="active">°F </a></span
                   >
@@ -86,37 +86,14 @@
               </div>
             </div>
           </div>
-
-          <div class="row">
-            <div class="col-2">
-              <div class="weekday">Tue</div>
-              <img src="images/cloudy.png" width="40px" /> <br />
-              <span class="weektemp">86°</span>
-              <span class="weekcelcius">73°</span>
-            </div>
-            <div class="col-2">
-              <div class="weekday">Wed</div>
-              <img src="images/lightning.png" width="40px" /> <br />
-              <span class="weektemp">88°</span>
-              <span class="weekcelcius">70°</span>
-            </div>
-            <div class="col-2">
-              <div class="weekday">Thur</div>
-              <img src="images/lightning.png" width="40px" /> <br />
-              <span class="weektemp">86°</span>
-              <span class="weekcelcius">70°</span>
-            </div>
-            <div class="col-2">
-              <div class="weekday">Fri</div>
-              <img src="images/lightning.png" width="40px" /> <br />
-              <span class="weektemp">84°</span>
-              <span class="weekcelcius">70°</span>
-            </div>
-            <div class="col-2">
-              <div class="weekday">Sat</div>
-              <img src="images/sunny.png" width="40px" /> <br />
-              <span class="weektemp">88°</span>
-              <span class="weekcelcius">70°</span>
+          <div class="weather-forecast" id="weather-forecast">
+            <div class="row">
+              <div class="col-2">
+                <div class="weekday">Tue</div>
+                <img src="images/cloudy.png" width="40px" /> <br />
+                <span class="weektemp">86°</span>
+                <span class="weekcelcius">73°</span>
+              </div>
             </div>
           </div>
         </div>
