Removed fahrenheit link

--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
                 <div class="weather-temp">
                   <img src="" width="50px" id="cloudy-icon" />
                   <span class="displaytemp" id="temp-display"></span>
-                  <span class="maintemp">
-                    <a href="#" id="far-display" class="active">°F </a></span
-                  >
+                  <span class="maintemp">°F</span>
                 </div>
               </div>
               <div class="col-sm-4">
